# cs-journey

./: .gitignore  README.md  README_LOCAL_2505.md  log.md
BS-CE-enrollment-at-MidSwedenUniversity/1th-year/period1/Basic Computer Science/bullcow/includes/: MinaFuncs.hpp
BS-CE-enrollment-at-MidSwedenUniversity/1th-year/period1/Basic Computer Science/labb01/: labb01  values.txt
BS-CE-enrollment-at-MidSwedenUniversity/1th-year/period1/Basic Computer Science/labb02/: labb02  makefile
BS-CE-enrollment-at-MidSwedenUniversity/1th-year/period1/Basic Computer Science/labb03/: C  labb03  labb03.cpp
BS-CE-enrollment-at-MidSwedenUniversity/1th-year/period1/Basic Computer Science/labb04/: labb04
keep-learning/operating-systems/2021/: readers-writers-threads.py
keep-learning/operating-systems/2021/Laboration 3 - Scriptning/: datalin  datawin.txt  logistics.bat  logistics.sh
keep-learning/operating-systems/2021/scripting/: logistics.bat  logistics.sh
keep-learning/programming-languages/2020/c++/bullscows/: bullscows  bullscows.cpp  makefile
keep-learning/programming-languages/2020/c++/bullscows/includes/: MinaFuncs.cpp
keep-learning/programming-languages/2020/c++/calculation-exercises/: labb01.cpp  makefile
keep-learning/programming-languages/2020/c++/sorting/: labb03.cpp  makefile
keep-learning/programming-languages/2020/c++/sorting/includes/: IsSorted.cpp  MergeFile.cpp  ReadFileToVector.cpp
keep-learning/programming-languages/2020/c++/text-processing/: labb02.cpp
keep-learning/programming-languages/2020/c++/wordcount/: labb04.cpp  makefile  test.txt
keep-learning/programming-languages/2021/doa_laboration02/: DataGenerator.cpp  DataGenerator.h  DataGenerator.hpp  SortAlgorithmer.h  dataOutputer.h  main.cpp  main.py
keep-learning/programming-languages/2021/dsa_bfs_dfs_dijkstras/: CMakeLists.txt  CONSTANTS.h  adjToMatrix.cpp  adjToMatrix.h  bfs.cpp  bfs.h  dfs.cpp  dfs.h  dijkstras.cpp  dijkstras.h  findNotVisited.cpp  findNotVisited.h  main.cpp  reader.cpp  reader.h
keep-learning/programming-languages/2021/dsa_searching/: CMakeLists.txt  DataGenerator.h  SearchAlgorithmer.h  dataOutputer.h  main.cpp  main.py  measureSearchTime.h
keep-learning/programming-languages/2021/dsa_sorting/: CMakeLists.txt  SortAlgorithmer.h  dataOutputer.h  main.cpp  main.py  measureSortTime.h
keep-learning/programming-languages/2021/linkedlists/: main.cpp  makefile
keep-learning/programming-languages/2021/linkedlists/includes/: MinaFuncs.cpp  MinaFuncs.hpp
keep-learning/programming-languages/2021/maze/: main.cpp  makefile
keep-learning/programming-languages/2021/maze/includes/: MinaFuncs.cpp  MinaFuncs.hpp
keep-learning/programming-languages/2021/structs/: main.cpp  makefile
keep-learning/programming-languages/2021/structs/includes/: MinaFuncs.cpp  MinaFuncs.hpp
keep-learning/programming-languages/2022/c++/metodik_invaders/: CMakeLists.txt  ShipEntity.h  alienship.cpp  alienship.h  gamemanager.cpp  gamemanager.h  imovable.h  main.cpp  playerspaceship.cpp  playerspaceship.h  projectile.h  qtinvaders.cpp  qtinvaders.h  qtinvaders.ui
keep-learning/programming-languages/2022/c++/metodik_invaders2/: BackgroundPixmapItem.h  CMakeLists.txt  GameMenu.cpp  GameMenu.h  GameObject.cpp  GameObject.h  GameScene.cpp  GameScene.h  InputHandler.cpp  InputHandler.h  MenuButton.cpp  MenuButton.h  MenuScene.cpp  MenuScene.h  SceneMaker.h  SfxHandler.cpp  SfxHandler.h  SpawnHandler.cpp  SpawnHandler.h  background.cpp  background.h  backgroundmusic.cpp  backgroundmusic.h  bullet.cpp  bullet.h  enemy.cpp  enemy.h  game.cpp  game.h  invaders.cpp  invaders.h  invaders.ui  main.cpp  player.cpp  player.h  resource.qrc  settings.cpp  settings.h  spacecraft.cpp  spacecraft.h
keep-learning/programming-languages/2022/c++/metodik_laboration01/: CMakeLists.txt  int_buffer.cpp  int_buffer.h  int_sorted.cpp  int_sorted.h  main.cpp  svar.txt
keep-learning/programming-languages/2022/c++/metodik_laboration02/: CMakeLists.txt  Circle.cpp  Circle.h  Cylinder.cpp  Cylinder.h  Parallelepiped.cpp  Parallelepiped.h  Rectangle.cpp  Rectangle.h  RoundedRect.cpp  RoundedRect.h  Shape.cpp  Shape.h  main.cpp
keep-learning/programming-languages/2022/c++/metodik_laboration03/: CMakeLists.txt  main.cpp  pQueue.h
keep-learning/programming-languages/2022/c++/metodik_laboration04/: CMakeLists.txt  Email.cpp  Email.h  MailBox.cpp  MailBox.h  main.cpp
keep-learning/programming-languages/2022/c++/metodik_laboration05/: CMakeLists.txt  Car.cpp  Car.h  MyBinOp.cpp  MyBinOp.h  MyFunc.cpp  MyFunc.h  MyPrint.cpp  MyPrint.h  MyUnOp.cpp  MyUnOp.h  Predicate.h  main.cpp
keep-learning/programming-languages/2022/c++/metodik_projekt/: minesweeperboard.cpp  minesweeperboard.h  minesweeperboard.ui
keep-learning/programming-languages/2022/c++/sudoku/: sudokugame.cpp  sudokugame.h  sudokugame.ui
keep-learning/programming-languages/2022/java/01-dt006g-nosu2000/: JavaI.java  MyInfo.java  Variables.java
keep-learning/programming-languages/2022/java/02-dt006g-nosu2000/: Course.java  Story.java  testClass.java  uml.docx
keep-learning/programming-languages/2022/java/03-dt006g-nosu2000/: CD.java  CDTest.java  Publisher.java  PublisherTest1.java  PublisherTest2.java
keep-learning/programming-languages/2022/java/03-dt006g-nosu2000/javadoc/: allclasses-index.html  allpackages-index.html  element-list  help-doc.html  index.html  member-search-index.js  overview-tree.html  package-search-index.js  (+1 more)
keep-learning/programming-languages/2022/java/04-dt006g-nosu2000/: CommandPrompt.java  Guess.java
keep-learning/programming-languages/2022/java/05-dt196g-nosu2000/: Book.java  CD.java  DVD.java  Media.java  MediaTest.java  Publisher.java
keep-learning/programming-languages/2022/java/06-dt006g-nosu2000/: Uppgift1.java  Uppgift2.java
keep-learning/programming-languages/2022/java/07-dt006g-nosu2000/: Usernames.java  UsernamesTest.java  Yatzy.java  YatzyTest.java  YatzyTest2.java
keep-learning/programming-languages/2022/java/personsManager-project/: Address.java  Main.java  Person.java  ProjectUtils.java  Signature.java  persons.txt
(+21 files in other folders)
